objects/Digital_Transformation_Time_Tracking__c.object
<CustomObject>
    <description>used by the Digital Transformation team to track their time allocated to project activites</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <defaultValue>&quot;Digital Transformation&quot;</defaultValue>
        <label>Project</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Type__c</fullName>
        <label>Work Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Benefits Analysis</fullName>
                </value>
                <value>
                    <fullName>Business Process Reengineering</fullName>
                </value>
                <value>
                    <fullName>Change Management</fullName>
                </value>
                <value>
                    <fullName>Data &amp; Requirements Gathering</fullName>
                </value>
                <value>
                    <fullName>Data Conversion</fullName>
                </value>
                <value>
                    <fullName>Data Optimization</fullName>
                </value>
                <value>
                    <fullName>Design Review</fullName>
                </value>
                <value>
                    <fullName>Detailed Functional Specifications &amp; System Documentation</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Mgmt of Dev Activities during portions of the project which are capitalizable</fullName>
                </value>
                <value>
                    <fullName>Planning &amp; Scheduling of Deferrable Work</fullName>
                </value>
                <value>
                    <fullName>PTO</fullName>
                </value>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>Requirements</fullName>
                </value>
                <value>
                    <fullName>Solutioning</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Digital Transformation Time Tracking</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Work_Type__c</columns>
        <columns>Date__c</columns>
        <columns>Hours__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>Gaurav Chaturvedi</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Time_Tracking_Records</fullName>
        <columns>NAME</columns>
        <columns>Work_Type__c</columns>
        <columns>Date__c</columns>
        <columns>Hours__c</columns>
        <columns>Comments__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Time Tracking Records</label>
    </listViews>
    <nameField>
        <displayFormat>TT-{000}</displayFormat>
        <label>Time Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Digital Transformation Time Trackings</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>DT_TT_Hours_Per_Day_Cannot_Exceed_8</fullName>
        <active>true</active>
        <description>hours per day cannot exceed 8 on a time tracking record</description>
        <errorConditionFormula>Hours__c  &gt; 8</errorConditionFormula>
        <errorDisplayField>Hours__c</errorDisplayField>
        <errorMessage>Cannot exceed 8 hours in one work type per day</errorMessage>
    </validationRules>
</CustomObject>